<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt4"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/edit_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt2"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/username1"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit1"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt3"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit2"/>



    <Button
        android:id="@+id/login"
        android:layout_width="141dp"
        android:layout_height="69dp"
        android:onClick="Return"
        android:layout_gravity="center"
        android:text="@string/button4"
        android:textAlignment="center"
        android:textSize="18sp" />
</LinearLayout>