<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt2"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit1"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt3"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit2"/>

    <Button
        android:id="@+id/relogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Opennew"
        android:text="@string/button8" />

    <Button
        android:id="@+id/login"
        android:layout_width="141dp"
        android:layout_height="69dp"
        android:layout_gravity="center"
        android:text="@string/button1"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="429dp"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/hmbb" />
    </LinearLayout>

</LinearLayout>